--- a/kiweeks/main/templates/main/entrance_doors.html
+++ b/kiweeks/main/templates/main/entrance_doors.html
@@ -1,6 +1,6 @@
 {% extends 'main/shablon.html' %}
 
-{% block title%}Входные двери{% endblock %}
+{% block title%}{{category}}{% endblock %}
 
 {% block content %}
 <h3 class="mt-5" style="text-align: center;">{{category}}</h3>
