--- a/kiweeks/main/templates/main/shablon.html
+++ b/kiweeks/main/templates/main/shablon.html
@@ -18,8 +18,7 @@
 <div class='row'>
 <div class="offcanvas offcanvas-start" style="max-width: 350px" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
   <div class="offcanvas-header">
-    <a href="/" class="d-flex align-items-center pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom">
-      <svg class="bi pe-none me-2" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+    <a href="/" class="d-flex align-items-center pb-2 mb-1 link-body-emphasis text-decoration-none border-bottom">
       <span class="fs-5 fw-semibold"><img src="/static/main/img/logo.JPG"></span>
     </a>
     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -77,8 +76,12 @@
     </div>
     <div style="display: flex;height: 90px;justify-content: space-between;text-align: center;">
         <div style="color: #FFF;font-family: Inter;font-size: 32px;font-style: normal;font-weight: 400;line-height: normal;width:68px"></div>
-        <h1 class="text-center" style="display: flex;justify-content: center;align-content: center;flex-direction: column;">Двери Вос</h1>
-        <button class="btn btn-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling"> меню </button>
+        <a href="/" style="text-decoration: none;color: black;display: flex;"><h1 class="text-center" style="display: flex;justify-content: center;align-content: center;flex-direction: column;">Двери Вос</h1></a>
+        <button class="btn btn-secondary" style="height: 50px; display: flex; align-self: center" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling">
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
+            </svg>
+        </button>
     </div>
 </div>
 <main class="px-md-4 pt-3">
