--- a/kiweeks/main/templates/main/shablon.html
+++ b/kiweeks/main/templates/main/shablon.html
@@ -31,9 +31,9 @@
         </button>
         <div class="collapse" id="home-collapse" style="">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-            <li><a href="/assortment/2" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Двери для квартиры</a></li>
+            <li><a href="/assortment/apartament" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Двери для квартиры</a></li>
+            <li><a href="/assortment/entrance_thermal" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Двери с терморазрывом</a></li>
 <!--            <li><a href="/assortment/1" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Двери для дома</a></li>-->
-            <li><a href="/assortment/3" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Двери с терморазрывом</a></li>
           </ul>
         </div>
       </li>
@@ -43,7 +43,7 @@
         </button>
         <div class="collapse" id="dashboard-collapse" style="">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-            <li><a href="/assortment/4" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Межкомнатные двери</a></li>
+            <li><a href="/assortment/interior" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Межкомнатные двери</a></li>
           </ul>
         </div>
       </li>
@@ -65,7 +65,7 @@
 </div>
 <div class="main_window" style="display: flex; flex-direction: column">
 <div class="fixed-top" style="box-shadow: 65px 0 70px #e4e6eb;background:white">
-    <div style="display: flex;justify-content: center;align-items: center;gap: 30px;height: 40px;">
+    <div class="top-data-info" style="display: flex;justify-content: center;align-items: center;gap: 30px;height: 50px;">
         <p>Воскресенск, Московская область, 2-я Заводская улица, 6с2</p>
         <p>Ежедневно с 9:00 до 18:00</p>
         <div class="сontact_phone" style="display: flex;">
@@ -85,7 +85,6 @@
     </div>
 </div>
 <main class="px-md-4 pt-3">
-    <br>
     <br>
     <br>
     <br>
