--- a/kiweeks/main/templates/main/shablon.html
+++ b/kiweeks/main/templates/main/shablon.html
@@ -64,26 +64,8 @@
   </div>
 </div>
 <div class="main_window" style="display: flex; flex-direction: column">
-<div class="fixed-top" style="box-shadow: 65px 0 70px #e4e6eb;background:white">
-    <div class="top-data-info" style="display: flex;justify-content: center;align-items: center;gap: 30px;height: 50px;">
-        <p>Воскресенск, Московская область, 2-я Заводская улица, 6с2</p>
-        <p>Ежедневно с 9:00 до 18:00</p>
-        <div class="сontact_phone" style="display: flex;">
-            <p><a href="tel:79256213239">+79256213239</a></p>
-            <p style="color: white">.....</p>
-            <p><a href="tel:79255112367">+79255112367</a></p>
-        </div>
-    </div>
-    <div style="display: flex;height: 90px;justify-content: space-between;text-align: center;">
-        <div style="color: #FFF;font-family: Inter;font-size: 32px;font-style: normal;font-weight: 400;line-height: normal;width:68px"></div>
-        <a href="/" style="text-decoration: none;color: black;display: flex;"><h1 class="text-center" style="display: flex;justify-content: center;align-content: center;flex-direction: column;">Двери Вос</h1></a>
-        <button class="btn btn-secondary" style="height: 50px; display: flex; align-self: center" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling">
-            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
-            </svg>
-        </button>
-    </div>
-</div>
+{% block headers %}
+{% endblock %}
 <main class="px-md-4 pt-3">
     <br>
     <br>
