--- a/kiweeks/main/templates/main/entrance_doors.html
+++ b/kiweeks/main/templates/main/entrance_doors.html
@@ -1,6 +1,6 @@
 {% extends 'main/shablon.html' %}
 
-{% block title%}{{category}}{% endblock %}
+{% block title %}{{category}}{% endblock %}
 
 {% block headers %}
 <div class="fixed-top" style="box-shadow: 65px 0 70px #e4e6eb;background:white">
@@ -31,17 +31,17 @@
 <div class="album py-5 bg-body-tertiary" style="margin-top: 40px">
 <div class="container">
 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-md-4 row-cols-md-5 row-cols-md-6 g-2">
-  {% for door in doors%}
+  {% for door in doors %}
   <a href="{% url 'door_info' door_id=door.id %}" style="color:black; text-decoration:none;">
         <div class="col" style="min-height: 400px">
           <div class="card shadow-sm" style="min-height: 400px">
             <div style="margin: 0 auto">
-              {% if door.photo_door_set.all|length == 1 and category.id <= 3 %}
-                {% for photo in door.photo_door_set.all %}
-                <img src="{{photo.photos.url}}" style="width: 140px; height: 160px;">
+              {% if door.photo_door_set.all|length == 1 and door.category_id <= 3 %}
+                  {% for photo in door.photo_door_set.all %}
+                <img src="{{photo.photos.url}}" style="width: 160px; height: 160px;">
                   {% endfor %}
               {% else %}
-                  {% for photo in door.photo_door_set.all %}
+                {% for photo in door.photo_door_set.all %}
                 <img src="{{photo.photos.url}}" style="width: 80px; height: 160px">
                   {% endfor %}
               {% endif%}
