--- a/kiweeks/main/templates/main/entrance_doors.html
+++ b/kiweeks/main/templates/main/entrance_doors.html
@@ -44,3 +44,15 @@
 </div>
 </div>
 {% endblock %}
+
+{% block pages %}
+<nav>
+  <ul>
+    {% for p in page_obj.paginator.page_range %}
+      <li>
+        <a href="?page={{ p }}">{{p}}</a>
+      </li>
+    {% endfor %}
+  </ul>
+</nav>
+{% endblock %}
