--- a/kiweeks/main/templates/main/shablon.html
+++ b/kiweeks/main/templates/main/shablon.html
@@ -1,4 +1,4 @@
-{% load static %}
+	{% load static %}
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -47,19 +47,16 @@
           </ul>
         </div>
       </li>
-<!--      <li class="mb-1">-->
-<!--        <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#orders-collapse" aria-expanded="false">-->
-<!--          Фурнитура-->
-<!--        </button>-->
-<!--        <div class="collapse" id="orders-collapse" style="">-->
-<!--          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">-->
-<!--            <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">...</a></li>-->
-<!--            <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">...</a></li>-->
-<!--            <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">...</a></li>-->
-<!--            <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">....</a></li>-->
-<!--          </ul>-->
-<!--        </div>-->
-<!--      </li>-->
+      <li class="mb-1">
+        <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#orders-collapse" aria-expanded="false">
+          Фурнитура
+        </button>
+        <div class="collapse" id="orders-collapse" style="">
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+            <li><a href="/assortment/аccessories" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Фурнитура</a></li>
+          </ul>
+        </div>
+      </li>
     </ul>
   </div>
 </div>
