--- a/kiweeks/main/templates/main/entrance_doors.html
+++ b/kiweeks/main/templates/main/entrance_doors.html
@@ -46,12 +46,18 @@
 {% endblock %}
 
 {% block pages %}
-<nav>
-  <ul>
+<nav aria-label="Page navigation example">
+  <ul class="pagination justify-content-center">
     {% for p in page_obj.paginator.page_range %}
-      <li>
-        <a href="?page={{ p }}">{{p}}</a>
-      </li>
+        {% if p != current_page %}
+        <li class="page-item">
+          <a class="page-link" href="?page={{ p }}">{{p}}</a>
+        </li>
+        {% else %}
+        <li class="page-item active">
+          <a class="page-link" href="?page={{ p }}">{{p}}</a>
+        </li>
+        {% endif%}
     {% endfor %}
   </ul>
 </nav>
