--- a/kiweeks/static/main/css/main.css
+++ b/kiweeks/static/main/css/main.css
@@ -150,10 +150,12 @@ img {
 }
 
 .choosebutton {
+    margin-bottom: 5px;
     padding: 5px 10px;
-    border: #00000060 2px solid;
+    border: 2px solid;
     border-radius: 10px;
     width: fit-content;
+    border-color: #FFA000;
 }
 
 input[type=radio]:checked + .choosebutton, .choosebutton.active {
@@ -172,7 +174,7 @@ input[type=radio]:checked + .choosebutton, .choosebutton.active {
 @media screen and (max-width: 1100px) {
     .photo_header {
          content: url("/static/main/img/header_phone.png")!important;
-         width: 100%!important;
+         width: 110%!important;
     }
 }
 
@@ -196,6 +198,7 @@ input[type=radio]:checked + .choosebutton, .choosebutton.active {
     .row-cols-1 > * {width: 100%;}
     .header_platform > * {height: 115px;}
     .shablon_door_photos > * {width: 165px;}
+    .photo_header {width: 110%!important;}
 }
 
 /*.photo_header {*/
