--- a/kiweeks/main/templates/main/entrance_doors.html
+++ b/kiweeks/main/templates/main/entrance_doors.html
@@ -12,7 +12,7 @@
   <a href="{% url 'door_info' door_id=door.id %}" style="color:black; text-decoration:none;">
         <div class="col" style="min-height: 400px">
           <div class="card shadow-sm" style="min-height: 400px">
-            <div style="margin: 0 auto">
+            <div class="photo_card_door" style="margin: 0 auto">
               {% if door.photo_door_set.all|length == 1 and door.category_id <= 3 %}
                   {% for photo in door.photo_door_set.all %}
                 <img src="{{photo.photos.url}}" style="width: 160px; height: 160px;">
